scripts/nullaway/annotator/url86119f019a_solzy_hive_parse_tgz-pJ8-org_apache_hadoop_hive_ql_parse_MainJ8.txt
../annotator/url86119f019a_solzy_hive_parse_tgz-pJ8-org_apache_hadoop_hive_ql_parse_MainJ8/src/org/apache/hadoop/hive/ql/parse/Main.java:42: error: [NullAway] dereferenced expression ast is @Nullable
          System.out.println(ast.dump());
                                ^
    (see http://t.uber.com/nullaway )
../annotator/url86119f019a_solzy_hive_parse_tgz-pJ8-org_apache_hadoop_hive_ql_parse_MainJ8/src/org/apache/hadoop/hive/ql/parse/ASTNode.java:111: error: [NullAway] enhanced-for expression getChildren() is @Nullable
      for (Node node : getChildren()) {
                                  ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
